// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.android.adservices.service.proto;

option java_multiple_files = true;
option java_package = "com.android.adservices.service.proto";

// DevSession stores the current state of developer mode on the device.
message DevSession {
  // Expiration time for the current developer mode session.
  // This value will be set to zero (epoch time) if reset.
  // int64 is used instead of google.protobuf.Timestamp as it doesn't require
  // libprotobuf.
  optional int64 expiry_time_sec = 1;
}